--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.11.3",
+    "graphql": "^16.9.0",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18"
