email enquiry handler

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,6 @@
 CMS_URL=https://cms.torchlight.foundation
 CMS_GRAPHQL=https://cms.torchlight.foundation/graphql
+
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-email-password
+RECIPIENT_EMAIL=recipient-email@example.com
