--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@apollo/client": "^3.11.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.11.3",
+    "@types/nodemailer": "^6.4.16",
     "graphql": "^16.9.0",
     "next": "14.2.9",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18"
   },
