newsletter form handler

--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,7 @@ CMS_GRAPHQL=https://cms.torchlight.foundation/graphql
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-email-password
 RECIPIENT_EMAIL=recipient-email@example.com
+
+MAILCHIMP_API_KEY=your_mailchimp_api_key
+MAILCHIMP_SERVER_PREFIX=usX  # replace X with your server prefix
+MAILCHIMP_AUDIENCE_ID=your_audience_id
