--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 CMS_URL=https://cms.torchlight.foundation
-CMS_GRAPHQL=https://cms.torchlight.foundation/graphql
+NEXT_PUBLIC_CMS_GRAPHQL=https://cms.torchlight.foundation/graphql
 
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-email-password
