--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.3",
     "@types/nodemailer": "^6.4.16",
     "graphql": "^16.9.0",
+    "http-proxy-middleware": "^3.0.3",
     "isomorphic-fetch": "^3.0.0",
     "next": "14.2.9",
     "nodemailer": "^6.9.15",
