--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.11.3",
+    "@stripe/stripe-js": "^4.9.0",
     "@types/nodemailer": "^6.4.16",
     "graphql": "^16.9.0",
     "http-proxy-middleware": "^3.0.3",
@@ -18,7 +19,8 @@
     "next": "14.2.9",
     "nodemailer": "^6.9.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^17.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
