--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.3",
     "@stripe/stripe-js": "^4.9.0",
     "@types/nodemailer": "^6.4.16",
+    "framer-motion": "^11.11.11",
     "graphql": "^16.9.0",
     "http-proxy-middleware": "^3.0.3",
     "isomorphic-fetch": "^3.0.0",
