--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
     ".next/types/**/*.ts",
     "src/app/get-support/courses/[slug]/page.tsx.backup",
     "src/components/Buttons/outlineButton.tsx.bckp",
-    "src/app/api/checkout/route.ts.bckup"
+    "src/app/api/checkout/route.ts.bckup",
+    "src/app/get-support/courses/booking/[slug]/page.tsx.stripe"
   ],
   "exclude": [
     "node_modules"
