--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-CMS_URL=https://cms.torchlight.foundation
-NEXT_PUBLIC_CMS_GRAPHQL=https://cms.torchlight.foundation/graphql
+CMS_URL=https://strapi-torchlight.onrender.com
+NEXT_PUBLIC_CMS_GRAPHQL=https://strapi-torchlight.onrender.com/graphql
 
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-email-password
